tests/classes/errors/valid_method_call.bl
class Foo {
    fun bar(x: Int) -> Int {
        return x + 5;
    }
}

var f: Foo = Foo();

f.bar();
